--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
           until curl -s http://localhost:3002 > /dev/null; do echo "Waiting for project-service..."; sleep 5; done
           until curl -s http://localhost:3000 > /dev/null; do echo "Waiting for auth-service..."; sleep 5; done
           until curl -s http://localhost:3003 > /dev/null; do echo "Waiting for project-user-post-service..."; sleep 5; done
+          until curl -s http://localhost:4000> /dev/null; do echo "Waiting for project-user-post-service..."; sleep 5; done
           echo "All services are up!"
      
       - name: Vérifier l’installation de vitest
