--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,8 @@ jobs:
           echo "MYSQL_ADMIN_USER=${{ secrets.MYSQL_ADMIN_USER }}" >> .env
           echo "PORT=${{ secrets.PORT }}" >> .env
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
+          echo "DOCKER_TARGET=${{ secrets.DOCKER_TARGET }}" >> .env
+
 
       - name: Start all services
         run: docker compose up -d
@@ -47,6 +49,7 @@ jobs:
       #     until curl -s http://localhost:3003 > /dev/null; do echo "Waiting for project-user-post-service..."; sleep 5; done
       #     until curl -s http://localhost:4000 > /dev/null; do echo "Waiting for frontend-service..."; sleep 5; done
       #     echo "All services are up!"
+      
       - name: Vérifier l’installation de vitest
         run: |
           cd frontend
