--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,11 +76,11 @@ jobs:
           test-container: "chat-service"
           test-command: "npm run test:e2e"
 
-      - name: Run tests for project_user_post service
+      - name: Run tests for project-user-post service
         uses: adambirds/docker-compose-action@v1.5.0
         with:
             compose-file: "docker-compose.yml"
-            test-container: "project_user_post-service"
+            test-container: "project-user-post-service"
             test-command: "npm run test:e2e"
 
       - name: Stop services
