--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -201,7 +201,7 @@ jobs:
                 ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
                   IMAGE_URI=${ECR_REGISTRY}/${{ env.ECR_FRONTEND_REPOSITORY }}:${{ env.IMAGE_TAG }}
-                  docker build -t $IMAGE_URI ./frontend
+                  docker build -t $IMAGE_URI --target production ./frontend
                   docker push $IMAGE_URI
                   echo "image=$IMAGE_URI" >> $GITHUB_OUTPUT
 
