--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: Deploy to Amazon ECS
 on:
   push:
     branches:
-      - main
+      - dev
 
 env:
   AWS_REGION: eu-west-3  
@@ -90,6 +90,7 @@ jobs:
           TF_VAR_PORT: ${{ secrets.PORT }}
           TF_VAR_MYSQL_ADMIN_PASSWORD: ${{ secrets.MYSQL_ADMIN_PASSWORD }}
           TF_VAR_MYSQL_ADMIN_USER: ${{ secrets.MYSQL_ADMIN_USER }}
+          TF_VAR_DB_HOST: ${{ secrets.DB_HOST }}
       
 
       - name: Terraform Apply
@@ -112,6 +113,7 @@ jobs:
           TF_VAR_PORT: ${{ secrets.PORT }}
           TF_VAR_MYSQL_ADMIN_PASSWORD: ${{ secrets.MYSQL_ADMIN_PASSWORD }}
           TF_VAR_MYSQL_ADMIN_USER: ${{ secrets.MYSQL_ADMIN_USER }}
+          TF_VAR_DB_HOST: ${{ secrets.DB_HOST }}
 
         run: terraform apply -auto-approve
 
