--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,6 @@ jobs:
           echo "NODE_ENV=${{ secrets.NODE_ENV }}" >> .env
           echo "DOCKER_TARGET=${{ secrets.DOCKER_TARGET }}" >> .env
 
-
       - name: Start all services
         run: docker compose up -d
 
@@ -49,9 +48,13 @@ jobs:
           until curl -s http://localhost:3003 > /dev/null; do echo "Waiting for project-user-post-service..."; sleep 5; done
           until curl -s http://localhost:4000 > /dev/null; do echo "Waiting for frontend-service..."; sleep 5; done
           echo "All services are up!"
-          
-      - name : Wait to mysql service to be ready
-        run : ping ${{secrets.DB_HOST}}
+
+      - name: Wait for MySQL to be ready
+        run: |
+         until mysqladmin ping -h"${{ secrets.DB_HOST }}" -u"${{ secrets.MYSQL_USER }}" -p"${{ secrets.MYSQL_PASSWORD }}" --silent; do
+         echo "Waiting for MySQL..."
+         sleep 2
+         done
 
       - name: Vérifier l’installation de vitest
         run: |
