--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,13 +32,16 @@ services:
       context: ./services/auth-service
     container_name: auth-service
     environment:
-      MONGODB_URI: ${MONGODB_URI}
+      MONGODB_URI: ${ME_CONFIG_MONGODB_URL}
       JWT_SECRET: ${JWT_SECRET}
       PORT: ${PORT}
     ports: 
       - "3000:80"
     networks:
       - cda-networks
+    depends_on:
+      mongo:
+        condition: service_healthy
     restart: always
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost"]
@@ -58,7 +61,7 @@ services:
       DB_DATABASE_PROJECT: ${DB_DATABASE_PROJECT}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MONGODB_URI: ${MONGODB_URI}
+      MONGODB_URI: ${ME_CONFIG_MONGODB_URL}
       JWT_SECRET: ${JWT_SECRET}
       VITE_AUTH_SERVICE_URL: ${VITE_AUTH_SERVICE_URL}
       PORT: ${PORT}
@@ -68,6 +71,8 @@ services:
       - cda-networks
     depends_on:
       mysql:
+        condition: service_healthy
+      mongo:
         condition: service_healthy
     restart: always
     healthcheck:
@@ -88,7 +93,7 @@ services:
       DB_DATABASE_CHAT: ${DB_DATABASE_CHAT}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MONGODB_URI: ${MONGODB_URI}
+      MONGODB_URI: ${ME_CONFIG_MONGODB_URL}
       JWT_SECRET: ${JWT_SECRET}
       VITE_AUTH_SERVICE_URL: ${VITE_AUTH_SERVICE_URL}
       VITE_PROJECT_SERVICE_URL: ${VITE_PROJECT_SERVICE_URL}
@@ -99,6 +104,8 @@ services:
       - cda-networks
     depends_on:
       mysql:
+        condition: service_healthy
+      mongo:
         condition: service_healthy
     restart: always
     healthcheck:
@@ -119,7 +126,7 @@ services:
       DB_DATABASE_RELATION: ${DB_DATABASE_RELATION}
       MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MONGODB_URI: ${MONGODB_URI}
+      MONGODB_URI: ${ME_CONFIG_MONGODB_URL}
       JWT_SECRET: ${JWT_SECRET}
       VITE_AUTH_SERVICE_URL: ${VITE_AUTH_SERVICE_URL}
       VITE_PROJECT_SERVICE_URL: ${VITE_PROJECT_SERVICE_URL}
@@ -131,6 +138,8 @@ services:
       - cda-networks
     depends_on:
       mysql:
+        condition: service_healthy
+      mongo:
         condition: service_healthy
     restart: always
     healthcheck:
@@ -162,5 +171,42 @@ services:
       timeout: 10s
       retries: 5
 
+
+  mongo:
+    image: mongo
+    container_name: mongo-service
+    restart: always
+    networks:
+      - cda-networks
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      DB_AUTH: ${DB_AUTH}
+    volumes:
+      - mongodb_data:/data/db
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' |  mongosh --authenticationDatabase admin --host localhost -u ${MONGO_INITDB_ROOT_USERNAME} -p ${MONGO_INITDB_ROOT_PASSWORD} admin --quiet | grep -q 1
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+  mongo-express:
+    image: mongo-express
+    restart: always
+    networks:
+      - cda-networks
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${ME_CONFIG_MONGODB_ADMINUSERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${ME_CONFIG_MONGODB_ADMINPASSWORD}
+      ME_CONFIG_MONGODB_URL: ${ME_CONFIG_MONGODB_URL}
+      ME_CONFIG_BASICAUTH: "false"
+   
+    depends_on:
+      mongo:
+        condition: service_healthy
+
 volumes:
   mysql_data:
+  mongodb_data:
